[package]
name = "xcb-sys"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
description = "Raw bindings to the XCB library"
repository = "https://github.com/glowcoil/xcb-sys"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]

[build-dependencies]
bindgen = "0.57.0"

[features]
bigreq = []
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = []
ewmh = []
ge = []
glx = []
icccm = []
image = []
keysims = []
present = ["randr", "xfixes", "sync"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xc_misc = []
xf86dri = []
xfixes = ["render", "shape"]
xinerama = []
xinput = []
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]
