[package]
name = "xcb-sys"
version = "0.2.1"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2021"
description = "Raw bindings to the XCB library"
repository = "https://github.com/glowcoil/xcb-sys"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]

[build-dependencies]
roxmltree = "0.18.0"

[features]
bigreq = []
composite = ["xfixes"]
damage = ["xfixes"]
dpms = []
dri2 = []
dri3 = []
ge = []
glx = []
present = ["randr", "xfixes", "sync"]
randr = ["render"]
record = []
render = []
res = []
screensaver = []
shape = []
shm = []
sync = []
xc_misc = []
xevie = []
xf86dri = []
xf86vidmode = []
xfixes = ["render", "shape"]
xinerama = []
xinput = ["xfixes"]
xkb = []
xprint = []
xselinux = []
xtest = []
xv = ["shm"]
xvmc = ["xv"]
